<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="discountDetailViewModel"
            type="com.unidavi.tc.conto.viewModels.DiscountDetailsViewModel" />


    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".discount.DetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/str_codigo"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Código" />

            <TextView
                android:id="@+id/text_details_description_discount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                app:discountDetailDescription="@{discountDetailViewModel.discount}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_details_title"
                tools:text="10% de desconto em qualquer entrada do cardapio" />

            <TextView
                android:id="@+id/text_details_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/border"
                android:fontFamily="@font/roboto"
                android:padding="8dp"
                android:textColor="@color/purple_secondary"
                android:textSize="30sp"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="@{() -> discountDetailViewModel.onInactivateDiscount()}"
                app:discountDetailCode="@{discountDetailViewModel.discount}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_details_description_discount"
                tools:text="4DBYLK-04"
                android:focusable="true" />

            <TextView
                android:id="@+id/text_details_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                app:discountDetailActive="@{discountDetailViewModel.discount}"
                app:layout_constraintBottom_toBottomOf="@+id/image_details_active"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/image_details_active"
                app:layout_constraintTop_toBottomOf="@+id/text_details_code"
                tools:text="Ativo" />

            <ImageView
                android:id="@+id/image_details_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:discountDetailActiveImage="@{discountDetailViewModel.discount}"
                app:layout_constraintEnd_toStartOf="@+id/text_details_active"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_details_code"
                tools:src="@drawable/ic_active" />

            <TextView
                android:id="@+id/text_details_rule_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/text_details_rule_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_details_active_until" />

            <TextView
                android:id="@+id/text_details_rule_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/text_details_rules_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_details_rule_1" />

            <TextView
                android:id="@+id/text_details_active_until"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_details_active"
                tools:text="Válido até 22/03/2021" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>